# ai-waiter

./: .env_example  .gitignore  README.md  SETUP.md  ai_waiter.py  console.py  local_main.py  pyproject.toml  server.py
ai/: 002-webserver.md  003-model-choice-dotenv.md  004-tool-call-menu_lookup.md  prompt-01.md
demo/: README.md  local_run.md
docu/: README.md  app-hits-token-limits.md  gemini-cost-breakdown.md  io-tokens-optimized.md  small-models-wont-work.md  translated-menu-support.md
lang-graph-sample/: 3_chatbot.ipynb  5_tool_call_agent.ipynb  6_memory.ipynb
menu/: README.md  __init__.py  accessor.py  convert.js  convert.py  menu-schema.json  menu.json  menu_for_system_prompt.txt  normalize-menu.py  normalized-menu.json  scanned-menu.json  test_accessor.py  translate.py
static/: index.html
tool/: squash-merge-git-repo.sh
