[project]
name = "ai-waiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
]
